commenced user preference APIs
